# ztls

./: .gitignore  .ziglint.zon  AGENTS.md  CHANGELOG.md  PRODUCTION_READINESS.md  README.md  SECURITY.md  book.toml  build.zig  build.zig.zon  flake.nix  justfile  wrangler.jsonc
.github/: dependabot.yml
bench/: bio.zig  c.zig  c_ssl.zig  evp.zig  openssl_bio.c  openssl_evp.c  record_protection.zig  rfc8448.zig
conformance/: .gitignore  README.md  anvil-fetch.sh  anvil-skip-list.json  bogo-fetch.sh  bogo-skip-list.json  build.zig  build.zig.zon  conftest.py  justfile  pyproject.toml  run_anvil_client.py  run_anvil_server.py  run_bogo.sh  test_tls13.py  test_tlsanvil.py
conformance/scripts/: anvil_adapter.py  anvil_client.py  anvil_report.py  anvil_server.py
conformance/src/: anvil_client.zig  bogo.zig  fixtures  harness.zig  main.zig  net_compat.zig  tlsfuzzer_server.zig
conformance/test_fixtures/: anvil_report_synthetic.json
conformance/tests/: test_anvil_adapter.py  test_anvil_client.py  test_anvil_report.py  test_anvil_server.py  test_tls13.py  test_tlsanvil.py
docs/: USAGE.md
examples/: README.md  c_client.c  epoll_pingpong.zig  full_handshake.zig  handshake_keys.zig  https_client.zig  https_server.zig  in_memory_handshake.zig  iouring_client.zig  iouring_pingpong.zig  key_schedule.zig  ktls_server.zig  net_compat.zig  record_protection.zig  tcp_loopback.zig
include/: ztls.h
just/: bench.just  brand.just  check.just  docs.just  tooling.just
nix/: README.md  shared.nix
rules/: no-c-pointer-types.yml  no-ztls-owned-allocations.yml  (+5 more)
src/: aead.zig  (+58 more)
(+293 files in other folders)
